<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.friendstouch.MainActivity" >

	<ImageView
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:contentDescription="@null"
	    android:scaleType="centerCrop"
	    android:src="@drawable/login" />
	
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username"
            android:layout_width="114dp"
            android:textSize="14sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_height="25dp"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="#fff"
            android:ems="5"
            android:hint="@string/username"
            android:inputType="text" 
        />

        <EditText
            android:id="@+id/password"
            android:layout_width="114dp"
            android:textSize="14sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_height="25dp"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:ems="5"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/logged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:text="@string/logged"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/login"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/login" />

            <ProgressBar
                android:id="@+id/pbLoginLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <Button
            android:id="@+id/not_registered"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="114dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/not_registered"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="12sp" />

    </LinearLayout>

</FrameLayout>
